--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "angular": "~1.3.14",
     "jquery": "~2.1.3",
     "lodash": "~3.4.0",
-    "bootstrap": "~3.3.2"
+    "bootstrap": "~3.3.2",
+    "angular-route": "~1.3.14"
   }
 }
