--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "jquery": "~2.1.3",
     "lodash": "~3.4.0",
     "bootstrap": "~3.3.2",
-    "angular-route": "~1.3.14"
+    "angular-route": "~1.3.14",
+    "angular-loader": "~1.3.15"
   }
 }
