--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app/app.js",
   "dependencies": {
     "grunt": "^0.4.5",
-    "grunt-contrib-jshint": "^0.11.0"
+    "grunt-contrib-jshint": "^0.11.0",
+    "script": "^0.1.4"
   },
   "devDependencies": {
     "browserify": "^9.0.3",
